Fixes [code], so it does not wrap and can be scrolled. [code] tags must reside in a [div] with class [code].

--- a/main.css
+++ b/main.css
@@ -35,7 +35,7 @@
 	--accent: #ffb300;
 	--accent-hover: #1266e2;
 	--accent-text: var(--bg);
-	--code: #d81b60;
+	--code: #1f5c03;
 	--preformatted: #444;
 	--marked: #ffdd33;
 	--disabled: #efefef;
@@ -56,7 +56,7 @@
 		--accent: #ffb300;
 		--accent-hover: #ffe099;
 		--accent-text: var(--bg);
-		--code: #f06292;
+		--code: #1f5c03;
 		--preformatted: #ccc;
 		--disabled: #111;
 	}
@@ -194,8 +194,15 @@ a:hover
 }
 
 
+div.code
+{
+    overflow-x: scroll;
+}
+
+
 code, kbd
 {
+    text-wrap: nowrap;
 	padding: 2px 5px;
 	background: var(--accent-bg);
 	color: var(--code);
